# qxhttpd

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
db/: ev0000.sqlite  ev0001.sqlite  qxdb.sqlite
db/edb/migrations/: 20250413184352_create_db.sql  20250424071515_simplify_changes_table.sql
db/migrations/: 20250131151753_create_table_events.sql  20250221190857_event-token.sql  20250222104651_add-demo-event.sql  20250307153848_add-runs-table.sql  20250309095342_add-class-start-time.sql  20250621184259_changes_table_rename_run_id_to_data_id.sql  20250703173803_add-stage-field.sql
db/script/: create_event_db.sql
doc/: openapi.yaml
images/: x.xcf
private/: ca_cert.pem  ca_key.pem  ed25519.p12  ed25519_cert.pem  ed25519_key.pem
qxhttpd_proc_macros/: Cargo.toml
qxhttpd_proc_macros/src/: lib.rs
src/: api.rs  auth.rs  changes.rs  db.rs  event.rs  files.rs  iofxml3.rs  main.rs  oc.rs  ochecklist.rs  qe.rs  quickevent.rs  qx.rs  qxdatetime.rs  runs.rs  sql.rs  table.rs  tables.rs  tests.rs  util.rs
src/iofxml3/: parser.rs  structs.rs
src/qe/: classes.rs  runs.rs
src/tables/: classes.rs  occhng.rs  qxchng.rs  runs.rs
static/css/: skeleton.css  style.css
static/js/: utils.js
templates/: changes.html.hbs  event-edit.html.hbs  event.html.hbs  events.html.hbs  footer.html.hbs  index.html.hbs  layout.html.hbs  nav.html.hbs  oc-changes.html.hbs  oc-out.html.hbs  qe-chng-in.html.hbs  qe-in.html.hbs  results.html.hbs  startlist.html.hbs
templates/error/: 404.html.hbs
tests/: startlist-iof3.xml
tests/oc/data/: 0001  0002  0003  0004  0005  0006  0007  0008
